--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,12 @@ body {
     text-align: center;
 }
 
-#main-form {
+.main-form {
     border: 1px solid lightgrey;
     display: inline-block;
     padding: 2rem;
 }
 
 .ng-invalid {
-    border: 1px solid red !important;
+    border: 1px solid red;
 }
